--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,9 +77,9 @@ publish:
   image: cenk1cenk2/drone-semantic-release
   variables:
     PLUGIN_GIT_METHOD: gl
-    PLUGIN_MODE: publish
+    PLUGIN_MODE: predict
     PLUGIN_ADD_MODULES: "@qiwi/multi-semantic-release @semantic-release/gitlab npm-cli-login"
-    PLUGIN_OVERRIDE: multi-semantic-release
+    PLUGIN_OVERRIDE: multi-semantic-release --sequential-init
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "false"
