--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "workspaces": {
     "packages": [
-      "packages/brownie",
-      "packages/eslint-config",
-      "packages/nx-tools"
+      "packages/*"
     ],
     "nohoist": []
   },
