fix: try the old way of publishing as well

--- a/packages/nestjs-util/tsconfig.build.json
+++ b/packages/nestjs-util/tsconfig.build.json
@@ -5,6 +5,7 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "incremental": false
+    "incremental": false,
+    "sourceMap": false
   }
 }
