--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,14 +78,15 @@ publish:
   variables:
     PLUGIN_GIT_METHOD: gl
     PLUGIN_MODE: predict
-    PLUGIN_ADD_MODULES: "@qiwi/multi-semantic-release @semantic-release/gitlab npm-cli-login"
-    PLUGIN_OVERRIDE: multi-semantic-release --sequential-init
+    PLUGIN_ADD_MODULES: "semantic-release-monorepo @semantic-release/gitlab"
+    PLUGIN_OVERRIDE: npx --no-install lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "false"
     PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
     PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
     PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
+    npm_config_loglevel: verbose
     # PLUGIN_NPM_TOKEN: $NPM_WS_TOKEN
     DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
   before_script:
