--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -44,6 +44,7 @@
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.1",
     "change-case": "^4.1.1",
+    "deepmerge": "^4.2.2",
     "diff": "^5.0.0",
     "eslint": "^7.9.0",
     "execa": "^4.0.2",
@@ -64,6 +65,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/deepmerge": "^2.2.0",
     "@types/diff": "^4.0.2",
     "@types/eslint": "^7.2.5",
     "@types/figures": "^3.0.1",
