--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -33,11 +33,13 @@
     "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
     "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
+  "peerDependencies": {
+    "@nrwl/workspace": "*"
+  },
   "dependencies": {
     "@angular-devkit/architect": "^0.1000.4",
     "@angular-devkit/core": "^10.0.4",
     "@angular-devkit/schematics": "^10.0.4",
-    "@nrwl/workspace": "^10.4.4",
     "@nrwl/cli": "^10.4.2",
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.1",
