fix: brownie fixed falling back to npm, set npm as default

--- a/packages/brownie/config/default.yml
+++ b/packages/brownie/config/default.yml
@@ -10,7 +10,6 @@ workspace:
     - '@nrwl/cli'
     - '@nrwl/tao'
     - '@nrwl/workspace'
-    - '@angular-devkit/core'
-    - '@angular-devkit/schematics'
+    - '@angular/cli'
 
 package_registry: https://verdaccio.dev.webundsoehne.com
