fix: add typescript and uuid for now
@nrwl/workspace lists typescript and uuid as peer dependencies so while installing them globally it
has big problems, they are now explicitly installed.

--- a/packages/brownie/config/default.yml
+++ b/packages/brownie/config/default.yml
@@ -10,6 +10,9 @@ workspace:
     - '@nrwl/cli'
     - '@nrwl/tao'
     - '@nrwl/workspace'
+    # this is because @nrwl/workspace has these as peer and we are installing it globally
+    - typescript
+    - uuid
     - '@angular/cli'
 
 package_registry: https://verdaccio.dev.webundsoehne.com
