--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -86,6 +86,7 @@
     "lint-staged": "^10.2.2",
     "nest-schedule": "^0.6.4",
     "prettier": "^2.0.5",
+    "swagger-ui-express": "^4.1.5",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
