--- a/packages/nestjs-util/tsconfig.json
+++ b/packages/nestjs-util/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
+    "target": "es2017",
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
