fix: fix error parser for graphql with undefined messages

--- a/packages/nx-nest/src/schematics/microservice-provider/files/tsconfig.json
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/tsconfig.json
@@ -1,13 +1,9 @@
 {
-  "extends": "../../tsconfig",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": ".",
-    "baseUrl": ".",
-    "paths": {
-      "@src/*": ["src/*"],
-      "@interfaces/*": ["interfaces/*"]
-    }
+    "baseUrl": "."
   },
   "include": ["src", "test"],
   "exclude": ["node_modules"]
