fix: move includes to build tsconfig itself

--- a/packages/nx-nest/src/schematics/application/files/tsconfig.build.json
+++ b/packages/nx-nest/src/schematics/application/files/tsconfig.build.json
@@ -1,5 +1,6 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {},
+  "include": ["src", "migrations", "seeds"],
   "exclude": ["node_modules", "tests", "dist", "**/*spec.ts"]
 }
