perf: update all the packages
BREAKING CHANGE: There is ton of breaking changes due to angular, nx base libraries.

Fixed the bug with the apollo-server not liking fastify2 for playground by using beta.
Updated everything to latest version therefore contains a lot of breaking changes.

--- a/packages/nestjs-util/tsconfig.json
+++ b/packages/nestjs-util/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
+    "skipLibCheck": true,
+    "removeComments": false,
     "outDir": "./dist",
     "rootDir": "src",
     "baseUrl": "src",
     "lib": [ "DOM", "DOM.Iterable", "ES2020" ],
-    "removeComments": false,
     "paths": {
       "@filter": ["filter/index"],
       "@filter/*": ["filter/*"],
