--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "description": "Tailored NestJS NX Based Application Skeleton",
   "author": "Backend <backend@webundsoehne.com>",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "ls": "lerna la",
     "clean": "lerna clean -y && rimraf node_modules yarn.lock",
@@ -32,13 +32,27 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@cenk1cenk2/cz-cc": "^1.1.2",
-    "@nrwl/workspace": "^10.4.4",
-    "commitizen": "^4.0.5",
-    "husky": "^4.2.5",
-    "lerna": "^3.20.2",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
+    "@cenk1cenk2/cz-cc": "^1.3.5",
+    "@nrwl/workspace": "^11.4.0",
+    "commitizen": "^4.2.3",
+    "cpy-cli": "^3.1.1",
+    "husky": "^4",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-to-markdown": "^7.0.0",
+    "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "markdown-toc": "^1.2.0",
-    "typescript": "^4.0.3"
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.6",
+    "tsc-watch": "^4.2.8",
+    "tscpaths": "^0.0.9",
+    "typescript": "^4.2.2"
   },
   "config": {
     "commitizen": {
@@ -46,8 +60,9 @@
     }
   },
   "resolutions": {
-    "**/@angular-devkit/architect": "0.1102.2",
-    "**/@angular-devkit/core": "11.2.2",
-    "**/@angular-devkit/schematics": "11.2.2"
+    "**/rxjs": "6.6.6",
+    "**/@angular-devkit/architect": "0.1102.3",
+    "**/@angular-devkit/core": "11.2.3",
+    "**/@angular-devkit/schematics": "11.2.3"
   }
 }
