--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -40,8 +40,8 @@
     "util"
   ],
   "dependencies": {
-    "config": "^3.2.4",
-    "fs-extra": "^9.0.0",
+    "config": "^3.3.4",
+    "fs-extra": "^9.1.0",
     "moment": "^2.28.0",
     "reflect-metadata": "^0.1.13",
     "winston": "^3.2.1"
@@ -49,46 +49,38 @@
   "peerDependencies": {
     "@nestjs/common": ">= 7 < 8",
     "@nestjs/core": ">= 7 < 8",
-    "@nestjs/graphql": ">= 7 < 8",
-    "@nestjs/microservices": ">= 7 < 8",
     "@nestjs/swagger": ">= 4 < 5",
     "class-transformer": ">= 0.3.0",
     "class-validator": ">= 0.12.0",
-    "fastify": ">= 2 < 3",
+    "fastify": ">= 2",
     "fastify-swagger": ">= 3.0.0",
+    "nest-schedule": ">= 0.6.0",
     "graphql": ">= 15 < 16",
-    "nest-schedule": ">= 0.6.0"
+    "@nestjs/microservices": ">= 7 < 8",
+    "@nestjs/graphql": ">= 7 < 8"
   },
   "devDependencies": {
-    "@nestjs/common": "^7.5.4",
-    "@nestjs/core": "^7.5.4",
-    "@nestjs/graphql": "^7.8.2",
-    "@nestjs/microservices": "^7.5.4",
-    "@nestjs/swagger": "^4.7.4",
-    "@nestjs/testing": "^7.5.4",
+    "@nestjs/common": "^7.6.13",
+    "@nestjs/core": "^7.6.13",
+    "@nestjs/graphql": "^7.9.11",
+    "@nestjs/microservices": "^7.6.13",
+    "@nestjs/swagger": "^4.7.15",
+    "@nestjs/testing": "^7.6.13",
     "@types/config": "^0.0.38",
     "@types/jest": "^26.0.9",
-    "@types/node": "^14.14.8",
+    "@types/node": "^14.14.31",
     "@types/winston": "^2.4.4",
-    "amqp-connection-manager": "^3.2.1",
-    "amqplib": "^0.6.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "concurrently": "^5.0.0",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "^7.6.0",
-    "fastify": "^3.2.0",
-    "fastify-swagger": "^2.6.0",
-    "graphql": "^15.3.0",
-    "husky": "^4.2.5",
-    "jest": "^26.2.2",
-    "lint-staged": "^10.2.2",
+    "amqp-connection-manager": "^3.2.2",
+    "amqplib": "^0.7.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "concurrently": "^6.0.0",
+    "fastify": "^3.13.0",
+    "fastify-swagger": "^4.3.3",
+    "graphql": "^15.5.0",
     "nest-schedule": "^0.6.4",
     "prettier": "^2.0.5",
     "swagger-ui-express": "^4.1.5",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.3",
     "wait-on": "^5.0.0"
   },
   "engines": {
