--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -31,13 +31,8 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
@@ -58,22 +53,7 @@
     "tree-kill": "^1.2.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/execa": "^2.0.0",
-    "@types/tsc-watch": "^4.2.0",
-    "cpy-cli": "^3.1.1",
-    "eslint": "^7.3.1",
-    "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^6.0.1",
-    "lint-staged": "^10.2.11",
-    "rimraf": "^3.0.2",
-    "tsc-watch": "^4.2.9",
-    "tscpaths": "^0.0.9",
-    "typescript": "^4.0.3"
+    "@types/tsc-watch": "^4.2.0"
   }
 }
