--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -40,44 +40,30 @@
     "@angular-devkit/architect": "^0.1000.4",
     "@angular-devkit/core": "^10.0.4",
     "@angular-devkit/schematics": "^10.0.4",
-    "@nrwl/cli": "^11.0.20",
+    "@nrwl/cli": "^11.4.0",
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.1",
     "change-case": "^4.1.1",
     "deepmerge": "^4.2.2",
     "diff": "^5.0.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.21.0",
     "execa": "^5.0.0",
     "figures": "^3.2.0",
     "glob": "^7.1.6",
-    "listr2": "^3.1.1",
+    "listr2": "^3.3.4",
     "micromatch": "^4.0.2",
-    "nunjucks": "^3.2.1",
+    "nunjucks": "^3.2.3",
     "picomatch": "^2.2.2",
     "pidtree": "^0.5.0",
     "prettier": "^2.1.2",
     "through": "^2.3.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.0",
     "@types/eslint": "^7.2.5",
     "@types/figures": "^3.0.1",
-    "@types/nunjucks": "^3.1.3",
-    "@types/prettier": "^2.0.1",
-    "cpy-cli": "^3.1.1",
-    "jsdoc-babel": "^0.5.0",
-    "jsdoc-to-markdown": "^6.0.1",
-    "lint-staged": "^10.2.11",
-    "rimraf": "^3.0.2",
-    "tsc-watch": "^4.2.8",
-    "tscpaths": "^0.0.9",
-    "typescript": "^4.0.3"
+    "@types/nunjucks": "^3.1.4",
+    "@types/prettier": "^2.2.2"
   }
 }
