--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -68,13 +68,13 @@
     "patch-package"
   ],
   "dependencies": {
-    "@cenk1cenk2/boilerplate-oclif": "^1.5.2",
+    "@cenk1cenk2/boilerplate-oclif": "^1.6.1",
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.4",
     "fs-extra": "^9.1.0",
     "globby": "^11.0.0",
-    "patch-package": "^6.4.4",
+    "patch-package": "^6.4.5",
     "rewire": "^5.0.0",
     "tmp-promise": "^3.0.2",
     "tslib": "^2.0.1",
@@ -82,17 +82,8 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
-    "@types/node": "^14.14.8",
+    "@types/node": "^14.14.31",
     "@types/rewire": "^2.5.28",
-    "@types/wrap-ansi": "^3.0.0",
-    "eslint": "^7.6.0",
-    "husky": "^4.2.5",
-    "jest": "^26.2.2",
-    "lint-staged": "^10.2.7",
-    "prettier": "^2.0.5",
-    "tsc-watch": "^4.2.8",
-    "tsconfig-paths": "^3.9.0",
-    "tscpaths": "^0.0.9",
-    "typescript": "^4.0.3"
+    "@types/wrap-ansi": "^3.0.0"
   }
 }
