--- a/packages/patch-package/package.json
+++ b/packages/patch-package/package.json
@@ -74,6 +74,7 @@
     "@oclif/errors": "^1.3.4",
     "fs-extra": "^9.1.0",
     "globby": "^11.0.0",
+    "listr2": "^3.3.4",
     "patch-package": "^6.4.5",
     "rewire": "^5.0.0",
     "tmp-promise": "^3.0.2",
@@ -82,6 +83,7 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
+    "@types/fs-extra": "^9.0.8",
     "@types/node": "^14.14.31",
     "@types/rewire": "^2.5.28",
     "@types/wrap-ansi": "^3.0.0"
