--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "workspaces": {
-    "packages": ["packages/*"],
+    "packages": [
+      "packages/*"
+    ],
     "nohoist": []
   },
   "husky": {
@@ -52,6 +54,8 @@
     "rxjs": "^6.6.6",
     "tsc-watch": "^4.2.8",
     "tscpaths": "^0.0.9",
+    "typedoc": "^0.20.34",
+    "typedoc-plugin-markdown": "^3.6.0",
     "typescript": "^4.2.2"
   },
   "config": {
