fix(schematics): bgtask naming scheme

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "workspaces": {
-    "packages": [
-      "packages/*"
-    ],
+    "packages": ["packages/*"],
     "nohoist": []
   },
   "husky": {
