fix: update dependencies and type errors yet again

--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -40,17 +40,18 @@
     "@angular-devkit/architect": "^0.1200.1",
     "@angular-devkit/core": "^12.0.1",
     "@angular-devkit/schematics": "^12.0.1",
-    "@nrwl/cli": "^12.3.4",
+    "@nrwl/cli": "^12.3.5",
+    "@nrwl/devkit": "^12.3.5",
     "@types/micromatch": "^4.0.1",
     "@types/picomatch": "^2.2.4",
     "change-case": "^4.1.1",
     "deepmerge": "^4.2.2",
     "diff": "^5.0.0",
     "eslint": "^7.27.0",
-    "execa": "^5.0.0",
+    "execa": "^5.0.1",
     "figures": "^3.2.0",
     "glob": "^7.1.7",
-    "listr2": "^3.8.4",
+    "listr2": "^3.9.0",
     "micromatch": "^4.0.4",
     "nunjucks": "^3.2.3",
     "picomatch": "^2.3.0",
@@ -61,7 +62,7 @@
   "devDependencies": {
     "@types/deepmerge": "^2.2.0",
     "@types/diff": "^5.0.0",
-    "@types/eslint": "^7.2.11",
+    "@types/eslint": "^7.2.12",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.4",
     "@types/prettier": "^2.2.3"
