--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint:check": "yarn command --concurrency 1 lint:check",
     "lint:staged": "yarn command --concurrency 1 lint:staged",
     "docs:jsdoc": "yarn command --no-bail docs:jsdoc",
-    "scripts:link": "./scripts/link-packages.sh",
+    "scripts:link": "./scripts/link-packages.sh link",
+    "scripts:unlink": "./scripts/link-packages.sh unlink",
     "scripts:workspace": "./scripts/link-packages-to-workspace.sh",
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
@@ -35,11 +36,11 @@
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.2",
-    "@babel/preset-env": "^7.14.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.4",
+    "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
-    "@cenk1cenk2/cz-cc": "^1.3.23",
-    "@nrwl/workspace": "^12.3.4",
+    "@cenk1cenk2/cz-cc": "^1.3.25",
+    "@nrwl/workspace": "^12.3.5",
     "commitizen": "^4.2.4",
     "cpy-cli": "^3.1.1",
     "husky": "^4",
@@ -53,8 +54,8 @@
     "tsc-watch": "^4.3.1",
     "tscpaths": "^0.0.9",
     "typedoc": "^0.20.36",
-    "typedoc-plugin-markdown": "^3.8.2",
-    "typescript": "^4.2.4"
+    "typedoc-plugin-markdown": "^3.9.0",
+    "typescript": "^4.3.2"
   },
   "config": {
     "commitizen": {
@@ -63,8 +64,8 @@
   },
   "resolutions": {
     "**/rxjs": "6.6.7",
-    "**/@angular-devkit/architect": "0.1200.1",
-    "**/@angular-devkit/core": "12.0.1",
-    "**/@angular-devkit/schematics": "12.0.1"
+    "**/@angular-devkit/architect": "0.1200.2",
+    "**/@angular-devkit/core": "12.0.2",
+    "**/@angular-devkit/schematics": "12.0.2"
   }
 }
