fix: swap out the docker container

--- a/packages/brownie/templates/containers/nx/env.yml
+++ b/packages/brownie/templates/containers/nx/env.yml
@@ -1,3 +1,4 @@
-PACKAGE_START_COMMAND: start
-SERVICES: .
-PREFIX_LABEL: 'false'
+PACKAGE_MANAGER: npm
+DEFAULTS_LOGS: true
+DEFAULTS_COMMAND: npm run start
+SERVICE_0_CWD: .
