--- a/packages/nx-nest/src/schematics/application/files/Dockerfile
+++ b/packages/nx-nest/src/schematics/application/files/Dockerfile
@@ -9,10 +9,10 @@ COPY . /data/app
 RUN apk --no-cache --no-progress add tini
 
 # Create custom entrypoint supports environment variables
-RUN printf "#!/bin/ash\nyarn start" > /entrypoint.sh && \
+RUN printf "#!/bin/ash\nnpm run start" > /entrypoint.sh && \
   chmod +x /entrypoint.sh
 
 # Install Node packages, can not use lock file because of NX
-RUN yarn --production
+RUN npm i --production
 
 ENTRYPOINT ["/sbin/tini", "-vg", "--", "/entrypoint.sh"]
