--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,27 @@
 version: '3.7'
 services:
   monorepo:
-    image: cenk1cenk2/lerna-dev:latest
+    image: cenk1cenk2/node-fnm:latest
     environment:
-      - SERVICES=packages/brownie:packages/nestjs-util:packages/nx-tools:packages/nx-builders:packages/nx-nest:packages/nx-workspace:packages/patch-package:packages/nestjs-graphql-typeorm-dataloader
-      - RUN_IN_BAND=packages/nx-tools:packages/nx-builders
-      - RUN_IN_BAND_WAIT=15
+      SYNC_WAIT: 15
+      PROXY_PACKAGES_FOLDER: packages/
+      SERVICE_0_CWD: packages/nx-tools
+      SERVICE_0_NAME: nx-tools
+      SERVICE_0_SYNC: 'true'
+      SERVICE_1_CWD: packages/nx-builders
+      SERVICE_1_NAME: nx-builders
+      SERVICE_1_SYNC: 'true'
+      SERVICE_2_CWD: packages/brownie
+      SERVICE_2_NAME: brownie
+      SERVICE_3_CWD: packages/nestjs-util
+      SERVICE_3_NAME: nestjs-util
+      SERVICE_4_CWD: packages/nx-nest
+      SERVICE_4_NAME: nx-nest
+      SERVICE_5_CWD: packages/patch-package
+      SERVICE_5_NAME: patch-package
+      SERVICE_6_CWD: packages/nestjs-graphql-typeorm-dataloader
+      SERVICE_6_NAME: nestjs-graphql-typeorm-dataloader
+      SERVICE_7_CWD: packages/nx-workspace
+      SERVICE_7_NAME: nx-workspace
     volumes:
-      - .:/data/app
+      - .:/data
