--- a/packages/brownie/templates/containers/db-mysql/volumes.yml
+++ b/packages/brownie/templates/containers/db-mysql/volumes.yml
@@ -1,7 +1,8 @@
 - from: mysql-initialize.sh
   to: /docker-entrypoint-initdb.d/mysql-initialize.sh
   options: ro
-  mode: file
+  url: https://gist.githubusercontent.com/cenk1cenk2/50de15104b960128bb15ae832b8cf828/raw/mysql-initialize.sh
+  mode: url
   perm: 764
 
 - from: db
