--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -76,6 +76,7 @@
     "execa": "^5.0.1",
     "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
+    "got": "^11.8.2",
     "listr2": "^3.9.0",
     "nunjucks": "^3.2.3",
     "through": "^2.3.8",
