--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -31,8 +31,13 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
@@ -43,9 +48,9 @@
     "typescript": ">= 3.9.0"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1200.2",
-    "@angular-devkit/core": "^12.0.2",
-    "@angular-devkit/schematics": "^12.0.2",
+    "@angular-devkit/architect": "^0.1200.5",
+    "@angular-devkit/core": "^12.0.5",
+    "@angular-devkit/schematics": "^12.0.5",
     "@nrwl/cli": "^12.3.5",
     "@webundsoehne/nx-tools": "*",
     "delay": "^5.0.0",
