--- a/packages/nx-nest/package.json
+++ b/packages/nx-nest/package.json
@@ -31,15 +31,20 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*",
     "@webundsoehne/nx-builders": "*"
   },
   "dependencies": {
-    "@angular-devkit/schematics": "~12.0.1",
+    "@angular-devkit/schematics": "~12.0.5",
     "@nestjs/schematics": "^7.3.1",
     "@webundsoehne/nx-builders": "*",
     "@webundsoehne/nx-tools": "*",
