--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -30,16 +30,21 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.1200.2",
-    "@angular-devkit/core": "^12.0.2",
-    "@angular-devkit/schematics": "^12.0.2",
+    "@angular-devkit/architect": "^0.1200.5",
+    "@angular-devkit/core": "^12.0.5",
+    "@angular-devkit/schematics": "^12.0.5",
     "@nrwl/cli": "^12.3.5",
     "@nrwl/devkit": "^12.3.5",
     "@types/micromatch": "^4.0.1",
