--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docs:jsdoc": "yarn command --no-bail docs:jsdoc",
     "scripts:link": "./scripts/link-packages.sh link",
     "scripts:unlink": "./scripts/link-packages.sh unlink",
-    "scripts:workspace": "./scripts/link-packages-to-workspace.sh",
+    "scripts:workspace:link": "./scripts/link-packages-to-workspace.sh link",
+    "scripts:workspace:unlink": "./scripts/link-packages-to-workspace.sh unlink",
     "docs:toc": "markdown-toc README.md --bullets='-' -i"
   },
   "workspaces": {
