feat: update new version
BREAKING CHANGE: updates nestjs to 8 and some breaking changes due to playground

--- a/packages/nx-workspace/src/schematics/workspace/files/.deploy/.gitlab-ci.yml
+++ b/packages/nx-workspace/src/schematics/workspace/files/.deploy/.gitlab-ci.yml
@@ -17,7 +17,7 @@ prepare:
   script:
     # greet
     - echo "${MICROSERVICE_NAME}@${MICROSERVICE_CWD}"
-    # introduce preleminary actions
+    # introduce preliminary actions
     - apk add --no-cache --no-progress -q curl unzip jq
     # Download artifacts from the parent pipeline
     - |
