--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -19,8 +19,7 @@
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/",
     "lint:staged": "lint-staged",
     "docs:toc": "markdown-toc README.md --bullets='-' -i",
-        "docs:jsdoc": "typedoc src/index.ts src/microservices.ts src/graphql.ts --readme none"
-
+    "docs:jsdoc": "typedoc src/index.ts src/microservices.ts src/graphql.ts --readme none"
   },
   "husky": {
     "hooks": {
@@ -49,15 +48,15 @@
     "winston": "^3.2.1"
   },
   "peerDependencies": {
-    "@nestjs/common": ">= 7 < 8",
-    "@nestjs/core": ">= 7 < 8",
-    "@nestjs/graphql": ">= 7 < 8",
-    "@nestjs/microservices": ">= 7 < 8",
-    "@nestjs/swagger": ">= 4 < 5",
-    "class-transformer": ">= 0.3.0",
-    "class-validator": ">= 0.12.0",
-    "fastify": ">= 2",
-    "fastify-swagger": ">= 3.0.0",
+    "@nestjs/common": ">= 8 < 9",
+    "@nestjs/core": ">= 8 < 9",
+    "@nestjs/graphql": ">= 8 < 9",
+    "@nestjs/microservices": ">= 8 < 9",
+    "@nestjs/swagger": ">= 5 < 6",
+    "class-transformer": ">= 0.4.0",
+    "class-validator": ">= 0.13.0",
+    "fastify": ">= 3",
+    "fastify-swagger": ">= 4.0.0 < 5",
     "graphql": ">= 15 < 16",
     "nest-schedule": ">= 0.6.0"
   },
@@ -66,11 +65,11 @@
     "@nestjs/core": "^8.0.2",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/microservices": "^8.0.2",
-    "@nestjs/swagger": "^5.0.1",
+    "@nestjs/swagger": "^5.0.3",
     "@nestjs/testing": "^8.0.2",
     "@types/config": "^0.0.39",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
+    "@types/node": "^16.3.2",
     "@types/winston": "^2.4.4",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
