--- a/packages/nx-nest/src/schematics/application/files/tsconfig.build.json
+++ b/packages/nx-nest/src/schematics/application/files/tsconfig.build.json
@@ -2,5 +2,5 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {},
   "include": ["src", "migrations", "seeds"],
-  "exclude": ["node_modules", "tests", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
