--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -30,8 +30,13 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
-    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
+    "./**/*.{ts,js,tsx,jsx}": [
+      "prettier --loglevel warn --write",
+      "eslint --fix"
+    ],
+    "./**/*.{json,md}": [
+      "prettier --loglevel warn --write"
+    ]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
@@ -51,6 +56,7 @@
     "eslint": "^7.31.0",
     "execa": "^5.0.1",
     "figures": "^3.0.0",
+    "find-up": "^5.0.0",
     "glob": "^7.1.7",
     "listr2": "^3.11.0",
     "micromatch": "^4.0.4",
