fix: update workspace dependencies

--- a/packages/brownie/tsconfig.build.json
+++ b/packages/brownie/tsconfig.build.json
@@ -5,6 +5,8 @@
     "rootDir": "src",
     "baseUrl": "src",
     "noUnusedLocals": true,
-    "incremental": false
+    "incremental": false,
+    "sourceMap": false,
+    "declaration": false
   }
 }
