--- a/packages/brownie/tsconfig.json
+++ b/packages/brownie/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": "src",
     "baseUrl": "src",
     "strictNullChecks": false,
+    "sourceMap": true,
     "paths": {
       "@src/*": ["*"],
       "@commands/*": ["commands/*"],
