--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -72,8 +72,8 @@
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.5",
     "@webundsoehne/nx-tools": "*",
-    "enquirer": "^2.3.5",
-    "execa": "^5.0.1",
+    "enquirer": "^2.3.6",
+    "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
     "got": "^11.8.2",
@@ -91,6 +91,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.3.2",
     "@types/through": "^0.0.30",
-    "@types/update-notifier": "^5.0.1"
+    "@types/update-notifier": "^5.0.1",
+    "source-map-support": "^0.5.19"
   }
 }
