--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -30,31 +30,26 @@
     }
   },
   "lint-staged": {
-    "./**/*.{ts,js,tsx,jsx}": [
-      "prettier --loglevel warn --write",
-      "eslint --fix"
-    ],
-    "./**/*.{json,md}": [
-      "prettier --loglevel warn --write"
-    ]
+    "./**/*.{ts,js,tsx,jsx}": ["prettier --loglevel warn --write", "eslint --fix"],
+    "./**/*.{json,md}": ["prettier --loglevel warn --write"]
   },
   "peerDependencies": {
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "0.1202.1",
-    "@angular-devkit/core": "12.2.1",
-    "@angular-devkit/schematics": "12.2.1",
-    "@nrwl/cli": "^12.6.2",
-    "@nrwl/devkit": "^12.6.2",
+    "@angular-devkit/architect": "0.1202.2",
+    "@angular-devkit/core": "12.2.2",
+    "@angular-devkit/schematics": "12.2.2",
+    "@nrwl/cli": "^12.7.2",
+    "@nrwl/devkit": "^12.7.2",
     "@types/micromatch": "^4.0.2",
-    "@types/picomatch": "^2.2.5",
-    "change-case": "^4.1.1",
-    "colorette": "^1.2.2",
+    "@types/picomatch": "^2.2.6",
+    "change-case": "^4.1.2",
+    "colorette": "^1.3.0",
     "deepmerge": "^4.2.2",
     "diff": "^5.0.0",
     "eslint": "^7.31.0",
-    "execa": "^5.0.1",
+    "execa": "^5.1.1",
     "figures": "^3.0.0",
     "find-up": "^5.0.0",
     "glob": "^7.1.7",
