--- a/package.json
+++ b/package.json
@@ -26,33 +26,31 @@
     "packages": ["packages/*"],
     "nohoist": []
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run lint:staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "yarn run lint:staged",
+    "prepare-commit-msg": "[ -t 1 ] && exec < /dev/tty && git cz --hook || true"
   },
   "resolutions": {
     "**/rxjs": "7.3.0",
-    "**/@angular-devkit/architect": "0.1202.2",
-    "**/@angular-devkit/core": "12.2.2",
-    "**/@angular-devkit/schematics": "12.2.2"
+    "**/@angular-devkit/architect": "0.1202.5",
+    "**/@angular-devkit/core": "12.2.5",
+    "**/@angular-devkit/schematics": "12.2.5"
   },
   "dependencies": {},
   "devDependencies": {
     "@cenk1cenk2/cz-cc": "^1.3.25",
-    "@nrwl/workspace": "^12.7.2",
+    "@nrwl/workspace": "^12.9.0",
     "commitizen": "^4.2.4",
     "cpy-cli": "^3.1.1",
-    "husky-v4": "^4.3.8",
     "lerna": "^4.0.0",
     "lint-staged": "^11.0.1",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "simple-git-hooks": "^2.6.1",
     "tsc-watch": "^4.5.0",
     "tscpaths": "^0.0.9",
-    "typedoc": "^0.21.6",
+    "typedoc": "^0.22.3",
     "typedoc-plugin-markdown": "^3.10.3",
     "typescript": "^4.3.5"
   },
