--- a/packages/brownie/config/defaults/workspace.config.yml
+++ b/packages/brownie/config/defaults/workspace.config.yml
@@ -1,3 +1,3 @@
 - pkg: '@webundsoehne-private/nx-workspace'
-  registry: https://verdaccio.dev.webundsoehne.com
+  registry: https://verdaccio.webundsoehne.com
   collection: collections.json
