--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "rxjs": "^7.2.0",
     "simple-git-hooks": "^2.6.1",
     "tsc-watch": "^4.5.0",
-    "tscpaths": "^0.0.9",
+    "tsconfig-replace-paths": "^0.0.11",
     "typedoc": "^0.22.3",
     "typedoc-plugin-markdown": "^3.10.3",
     "typescript": "^4.3.5"
